<resources
    xmlns:tools="http://schemas.android.com/tools"
>
    <string name="puzzle_select">Select a puzzle:</string>
    <string name="yes">YES</string>
    <string name="storage_location">Storage Location</string>
    <string name="storage_location_desc">Configure where Forkyz stores/finds its files. Restart app after change.</string>
    <string name="internal_storage">App Internal Storage</string>
    <string name="select_sources">Puzzle Sources</string>
    <string name="select_sources_desc">Enable/disable sources for puzzle download.</string>
    <string name="daily_crosswords">Daily Crosswords</string>
    <string name="weekly_crosswords">Weekly Crosswords</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="browser_settings_desc">Behaviour and appearance of the puzzle list page.</string>
    <string name="interaction_settings">Interaction Settings</string>
    <string name="interaction_settings_desc">Behaviour and control of the puzzle grid while playing.</string>
    <string name="voice_settings">Voice Input Settings</string>
    <string name="voice_settings_desc">Configure the use of voice commands in game.</string>
    <string name="keyboard_settings">Keyboard Settings</string>
    <string name="keyboard_settings_desc">Appearance, behaviour, and type of keyboard used for entering text during play.</string>
    <string name="display_settings">Display Settings</string>
    <string name="display_settings_desc">Appearance of the app and displayed puzzle grid.</string>
    <string name="download_settings">Download Settings</string>
    <string name="download_settings_desc">Behaviour of the puzzle download features.</string>
    <string name="fit_screen_start">Fit to screen when starting</string>
    <string name="fit_screen_start_desc">Best-fits the puzzle when you start.</string>
    <string name="background_download_opts">Background Download Settings</string>
    <string name="no_hint_highlighting">No Hint Highlighting</string>
    <string name="no_hint_highlighting_desc">Prevents the pink boxes indicating \'hints\' in the form of reveals or show errors.</string>
    <string name="keyboard_showhide">Show/Hide In-App Keyboard</string>
    <string name="keyboard_showhide_desc">The show/hide behaviour of the in-app keyboard.</string>
    <string name="keyboard_layout">Keyboard Layout</string>
    <string name="keyboard_layout_desc">The layout of the in-app keyboard.</string>
    <string name="snap_current">Snap to Current Word</string>
    <string name="snap_current_desc">Toggles the auto-scrolling of the playboard to the current play position</string>
    <string name="show_length">Show Length</string>
    <string name="show_length_desc">Shows the number of letters in the answer on the clue line</string>
    <string name="scroll_to_clue">Scroll To Clue</string>
    <string name="scroll_to_clue_desc">Toggles the auto-scrolling to the selected clue in the clues list. (Works like Forkyz 1)</string>
    <string name="movement_style">Movement Style</string>
    <string name="movement_style_desc">Select what happens when you type past the end of a word.</string>
    <string name="skip_filled">Skip Filled Boxes</string>
    <string name="skip_filled_desc">Toggles the skipping of filled boxes when you enter a new letter.</string>
    <string name="preserve_correct">Preserve Correct Boxes when Showing Errors</string>
    <string name="preserve_correct_desc">Keeps you from overwriting a correct box when you are in \'Show Errors\' mode.</string>
    <string name="space_change_dir">Space Changes Direction</string>
    <string name="space_change_dir_desc">Spacebar changed direction rather than blanking the box.</string>
    <string name="enter_changes_direction">Enter Changes Direction</string>
    <string name="enter_changes_direction_desc">Enter changes direction rather than moving to the next clue.</string>
    <string name="double_tap_zoom">Double Tap Fit to Screen</string>
    <string name="double_tap_zoom_desc">Double tap changes zoom to fit to screen.</string>
    <string name="show_timer">Show Timer</string>
    <string name="show_timer_desc">Shows your puzzle time.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="full_screen">Full Screen</string>
    <string name="full_screen_desc">Hides the notification bar.\nYou must leave and re-enter a puzzle to apply.</string>
    <string name="orientation_lock">Orientation Lock</string>
    <string name="orientation_lock_desc">Locks the screen location</string>
    <string name="display_scratch">Display Scratch</string>
    <string name="display_scratch_desc">Display scratch notes on play board.</string>
    <string name="dont_delete_crossing">Don\'t delete crossing words</string>
    <string name="dont_delete_crossing_desc">When deleting, don\'t delete a letter if it is part of a filled-in crossing word</string>
    <string name="about_forkyz">About Forkyz</string>
    <string name="release_notes">Release Notes</string>
    <string name="license">License</string>
    <string name="keyboard_hide_button">Keyboard Hide Button</string>
    <string name="keyboard_hide_button_desc">Show a keyboard hide button instead of using the navigation back button.</string>
    <string name="keyboard_haptic">Keyboard Haptic Feedback</string>
    <string name="keyboard_haptic_desc">Vibrate on keyboard keypress.</string>
    <string name="keyboard_use_native">Use native keyboard</string>
    <string name="keyboard_use_native_desc">Use system soft input method. Still a bit experimental.</string>
    <string name="theme_preference">Theme</string>
    <string name="theme_preference_desc">Select application theme (requires restart).</string>
    <string name="background_download_time_config">Download Times</string>
    <string name="background_download_constraints_config">Download Constraints</string>
    <string name="background_download_hourly">Download puzzles hourly</string>
    <string name="background_download_hourly_desc">Download puzzles in the background once every  hour</string>
    <string name="background_download_days">Download puzzles on days</string>
    <string name="background_download_days_desc">Download puzzles in the background on the selected days</string>
    <string name="background_download_days_time">Daily download time</string>
    <string name="background_download_days_time_desc">If downloading on selected days, select download time (exact time depends on constraints and phone optimisations)</string>
    <string name="download_wifi_only">Download over Wifi only</string>
    <string name="download_wifi_only_desc_on">Only schedule background downloads when Wifi is available.</string>
    <string name="download_wifi_only_desc_off">Schedule background downloads even when not on Wifi</string>
    <string name="download_roaming">Download when roaming</string>
    <string name="download_roaming_desc_on">Schedule background downloads even when roaming</string>
    <string name="download_roaming_desc_off">Do not schedule background downloads when roaming (will download when roaming on Android 6 (Marshmallow) or earlier)</string>
    <string name="download_charging">Download while charging only</string>
    <string name="download_charging_desc_on">Only schedule background downloads when charging</string>
    <string name="download_charging_desc_off">Schedule background downloads when on battery</string>
    <string name="updates_mon_fri">Updates Monday-Friday</string>
    <string name="updates_mon_sat">Updates Monday-Saturday</string>
    <string name="updates_daily">Updates Daily</string>
    <string name="hamburger_abendblatt_daily">(DE) Hamburger Abendblatt</string>
    <string name="hamburger_abendblatt_daily_desc">Daily crossword in German</string>
    <string name="vingminutes">(FR) 20 Minutes</string>
    <string name="vingminutes_desc">Daily crossword in French, Level 2</string>
    <string name="le_parisien_daily_f1">(FR) Le Parisien force 1</string>
    <string name="le_parisien_daily_f1_desc">Daily crossword in French, Level 1</string>
    <string name="le_parisien_daily_f2">(FR) Le Parisien force 2</string>
    <string name="le_parisien_daily_f2_desc">Daily crossword in French, Level 2</string>
    <string name="le_parisien_daily_f3">(FR) Le Parisien force 3</string>
    <string name="le_parisien_daily_f3_desc">Daily crossword in French, Level 3</string>
    <string name="le_parisien_daily_f4">(FR) Le Parisien force 4</string>
    <string name="le_parisien_daily_f4_desc">Daily crossword in French, Level 4</string>
    <string name="guardian_daily">Guardian Daily Cryptic</string>
    <string name="independent_daily">Independent Daily Cryptic</string>
    <string name="newsday">Newsday</string>
    <string name="joseph_crossword">Thomas Joseph Crossword</string>
    <string name="sheffer_crossword">Sheffer Crossword</string>
    <string name="universal_crossword">Universal Crossword</string>
    <string name="usa_today">USA Today</string>
    <string name="de_standaard">(FL) De Standaard</string>
    <string name="de_standaard_desc">Daily crossword in Flemish</string>
    <string name="updates_thursdays">Updates Thursdays</string>
    <string name="updates_sundays">Updates Sundays</string>
    <string name="regular_sized">Regular Sized</string>
    <string name="large_sized">Large Sized</string>
    <string name="jonesin_crosswords">Jonesin\' Crosswords</string>
    <string name="premier_crossword">Premier Crossword</string>
    <string name="wall_street_journal">The Wall Street Journal</string>
    <string name="washington_post_sunday">The Washington Post Sunday</string>
    <string name="de_telegraaf">(DU) De Telegraaf</string>
    <string name="de_telegraaf_desc">Updates Sundays, in Dutch</string>
    <string name="custom_daily">Custom daily puzzle source</string>
    <string name="custom">Use custom source</string>
    <string name="custom_desc">Specify source URL below</string>
    <string name="custom_title">Puzzle name</string>
    <string name="custom_title_desc">Enter title for puzzle list</string>
    <string name="custom_url">Source URL</string>
    <string name="custom_url_desc">Enter URL formatted according to Java\'s DateTimeFormatter. The puzzle can be in any supported format.</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_clue">Clue</string>
    <string name="share_clue_response">Clue with Board</string>
    <string name="share_puzzle_full">Current Puzzle</string>
    <string name="share_puzzle_orig">Blank Puzzle</string>
    <string name="share_puzzle_open_share_url">Open Share URL</string>
    <string name="special_entry">Insert Special</string>
    <string name="clues">Clues</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_in_max">Zoom In Max</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="zoom_reset">Zoom Reset</string>
    <string name="show_errors">Show Errors</string>
    <string name="show_errors_full_grid">Grid</string>
    <string name="show_errors_cursor">Cursor</string>
    <string name="scratch_mode">Scratch Mode</string>
    <string name="reveal">Reveal</string>
    <string name="letter">Letter</string>
    <string name="word">Word</string>
    <string name="errors">Errors</string>
    <string name="puzzle">Puzzle</string>
    <string name="info">Info</string>
    <string name="support_puzzle_source">Support Puzzle Source</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_notes_clue">Clue</string>
    <string name="menu_notes_player">Puzzle</string>
    <string name="settings_label">Settings</string>
    <string name="keyboard_hide_manual">Hide keyboard manually</string>
    <string name="standard_theme_value">S</string>
</resources>