<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/daily_crosswords"
    android:key="selectDaily"
>
    <androidx.preference.CheckBoxPreference
        android:title="@string/de_standaard"
        android:summary="@string/de_standaard_desc"
        android:defaultValue="true"
        android:key="downloadDeStandaard"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/guardian_daily"
        android:summary="@string/updates_mon_fri"
        android:defaultValue="true"
        android:key="downloadGuardianDailyCryptic"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/hamburger_abendblatt_daily"
        android:summary="@string/hamburger_abendblatt_daily_desc"
        android:defaultValue="true"
        android:key="downloadHamAbend"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/independent_daily"
        android:defaultValue="true"
        android:key="downloadIndependentDailyCryptic"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/joseph_crossword"
        android:summary="@string/updates_mon_sat"
        android:defaultValue="true"
        android:key="downloadJoseph"
    />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="download20Minutes"
        android:summary="@string/vingminutes_desc"
        android:title="@string/vingminutes" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="downloadLeParisienF1"
        android:summary="@string/le_parisien_daily_f1_desc"
        android:title="@string/le_parisien_daily_f1" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="downloadLeParisienF2"
        android:summary="@string/le_parisien_daily_f2_desc"
        android:title="@string/le_parisien_daily_f2" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="downloadLeParisienF3"
        android:summary="@string/le_parisien_daily_f3_desc"
        android:title="@string/le_parisien_daily_f3" />
    <androidx.preference.CheckBoxPreference
        android:defaultValue="true"
        android:key="downloadLeParisienF4"
        android:summary="@string/le_parisien_daily_f4_desc"
        android:title="@string/le_parisien_daily_f4" />
    <androidx.preference.CheckBoxPreference
        android:title="@string/newsday"
        android:defaultValue="true"
        android:key="downloadNewsday"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/sheffer_crossword"
        android:summary="@string/updates_mon_sat"
        android:defaultValue="true"
        android:key="downloadSheffer"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/universal_crossword"
        android:summary="@string/updates_mon_sat"
        android:defaultValue="true"
        android:key="downloadUniversal"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/usa_today"
        android:defaultValue="true"
        android:summary="@string/updates_daily"
        android:key="downloadUSAToday"
    />
    <androidx.preference.CheckBoxPreference
        android:title="@string/wall_street_journal"
        android:defaultValue="true"
        android:summary="@string/updates_mon_sat"
        android:key="downloadWsj"
    />

    <androidx.preference.PreferenceCategory
        android:title="@string/custom_daily"
    >
        <androidx.preference.CheckBoxPreference
            android:title="@string/custom"
            android:defaultValue="false"
            android:summary="@string/custom_desc"
            android:key="downloadCustomDaily"
        />
        <androidx.preference.EditTextPreference
            android:title="@string/custom_title"
            android:summary="@string/custom_title_desc"
            android:key="customDailyTitle"
        />
        <androidx.preference.EditTextPreference
            android:title="@string/custom_url"
            android:summary="@string/custom_url_desc"
            android:key="customDailyUrl"
            android:inputType="textUri"
        />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
