<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <item
        android:id="@+id/play_menu_clues"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/clues"
    />
    <item
        android:id="@+id/play_menu_notes"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_notes"
    >
        <menu>
            <item
                android:id="@+id/play_menu_clue_notes"
                android:title="@string/menu_notes_clue"
            />
            <item
                android:id="@+id/play_menu_player_notes"
                android:title="@string/menu_notes_player"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_zoom"
        android:title="@string/zoom"
    >
        <menu>
            <item
                android:id="@+id/play_menu_zoom_in"
                android:title="@string/zoom_in"
            />
            <item
                android:id="@+id/play_menu_zoom_in_max"
                android:title="@string/zoom_in_max"
            />
            <item
                android:id="@+id/play_menu_zoom_out"
                android:title="@string/zoom_out"
            />
            <item
                android:id="@+id/play_menu_zoom_fit"
                android:title="@string/fit_to_screen"
            />
            <item
                android:id="@+id/play_menu_zoom_reset"
                android:title="@string/zoom_reset"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_show_errors"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/show_errors"
    >
        <menu>
            <item
                android:id="@+id/play_menu_show_errors_cursor"
                android:title="@string/show_errors_cursor"
                android:checkable="true"
            />
            <item
                android:id="@+id/play_menu_show_errors_grid"
                android:title="@string/show_errors_full_grid"
                android:checkable="true"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_scratch_mode"
        android:title="@string/scratch_mode"
        android:checkable="true"
    />
    <item
        android:id="@+id/play_menu_reveal"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/reveal"
    >
        <menu>
            <item
                android:id="@+id/play_menu_reveal_letter"
                android:title="@string/letter"
            />
            <item
                android:id="@+id/play_menu_reveal_word"
                android:title="@string/word"
            />
            <item
                android:id="@+id/play_menu_reveal_errors"
                android:title="@string/errors"
            />
            <item
                android:id="@+id/play_menu_reveal_puzzle"
                android:title="@string/puzzle"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info"
    />
    <item
        android:id="@+id/play_menu_support_source"
        android:title="@string/support_puzzle_source"
    />
    <item
        android:id="@+id/puzzle_menu_special_entry"
        android:title="@string/special_entry"
    />
    <item
        android:id="@+id/puzzle_menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
    >
        <menu>
            <item
                android:id="@+id/puzzle_menu_share_clue"
                android:title="@string/share_clue"
            />
            <item
                android:id="@+id/puzzle_menu_share_clue_response"
                android:title="@string/share_clue_response"
            />
            <item
                android:id="@+id/puzzle_menu_share_puzzle_full"
                android:title="@string/share_puzzle_full"
            />
            <item
                android:id="@+id/puzzle_menu_share_puzzle_orig"
                android:title="@string/share_puzzle_orig"
            />
            <item
                android:id="@+id/puzzle_menu_open_share_url"
                android:title="@string/share_puzzle_open_share_url"
            />
        </menu>
    </item>
    <item
        android:id="@+id/play_menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
    />
    <item
        android:id="@+id/play_menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
    />
</menu>
