<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/background_download_opts"
    android:key="backgroundDownloadOptions"
>
    <androidx.preference.PreferenceCategory
        android:title="@string/background_download_time_config"
    >
        <androidx.preference.CheckBoxPreference
            android:title="@string/background_download_hourly"
            android:summary="@string/background_download_hourly_desc"
            android:key="backgroundDownloadHourly"
            android:defaultValue="false"
        />
        <androidx.preference.MultiSelectListPreference
            android:title="@string/background_download_days"
            android:summary="@string/background_download_days_desc"
            android:key="backgroundDownloadDays"
            android:defaultValue="@array/emptyArray"
            android:entries="@array/backgroundDownloadDaysLabels"
            android:entryValues="@array/backgroundDownloadDaysValues"
        />
        <androidx.preference.ListPreference
            android:title="@string/background_download_days_time"
            android:summary="@string/background_download_days_time_desc"
            android:key="backgroundDownloadDaysTime"
            android:defaultValue="8"
            android:entries="@array/backgroundDownloadDaysTimeLabels"
            android:entryValues="@array/backgroundDownloadDaysTimeValues"
        />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/background_download_constraints_config"
    >
        <androidx.preference.CheckBoxPreference
            android:title="@string/download_wifi_only"
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:summaryOn="@string/download_wifi_only_desc_on"
            android:summaryOff="@string/download_wifi_only_desc_off"
            android:key="backgroundDownloadRequireUnmetered"
        />
        <androidx.preference.CheckBoxPreference
            android:title="@string/download_roaming"
            android:defaultValue="false"
            android:dependency="backgroundDownloadRequireUnmetered"
            android:summaryOn="@string/download_roaming_desc_on"
            android:summaryOff="@string/download_roaming_desc_off"
            android:key="backgroundDownloadAllowRoaming"
        />
        <androidx.preference.CheckBoxPreference
            android:title="@string/download_charging"
            android:defaultValue="false"
            android:summaryOn="@string/download_charging_desc_on"
            android:summaryOff="@string/download_charging_desc_off"
            android:key="backgroundDownloadRequireCharging"
        />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
